@startuml
skinparam linetype ortho

entity User {
  id: UUID <<PK>>
  name: String
  is_admin: Boolean
}

entity UserPassword {
  id: Integer <<PK>>
  password_hash: String
  salt: String
  hash_algorithm: String
  user_id: UUID <<FK>>
}

entity Email {
    email: String <<PK>>
    user_id: UUID <<FK>>
}

User ||--|| UserPassword
User ||--|{ Email

@enduml
